@@ -17,6 +17,8 @@
     immediately.
   o Verbose messages are now printed automatically in debug mode.
   o Changed copyrighter name
+  o Added command line switch `-L', activates the tunnel mode to
+    the host and port specified on the command line.
 
 
 [*] Wed May  1 2002 - netcat v0.2.2
